8.10.2/IDE/Specification/RulesDialog/README.md
## <p id="ruledialog1">操作條件式通則</p>
![pic][image_ruleDialog1]
* `(1)條件欄位`
    * 用途說明
    * 規格說明
        * 顯示條件式名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)條件欄位`有值 時, 致能
        * 開窗[條件式][link_Condoper]
        * 回傳: 條件說明
    * 作業流程
        * <ps>待補</ps> 
* `(3)清除鍵`
    * 用途說明
    * 規格說明
        * 當有清除鍵, 編輯狀態, 致能
        * 當有清除鍵, 清空`(1)條件欄位`
    * 作業流程    
        * <ps>待補</ps>         
* 其它說明
    * 編輯存回, 當條件清除時, 須連帶刪除該條件式的儲存內容

## <p id="ruledialog2">使用多語詞庫通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示多語名稱
        * 可自行輸入, 儲存處理如下說明
            * 當 多語料號為空白, 則新增多語詞庫
            * 當 多語料號不為空白, 則依多語料號及專案語系, 修改多語詞庫內容
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)名稱欄位`有值 時, 致能
        * 開窗[多語詞庫][link_Multilingual]
        * 回傳: 多語名稱
    * 作業流程    
        * <ps>待補</ps>         

## <p id="ruledialog3">挑選資料表通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示資料表名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)名稱欄位`有值 時, 致能
        * 開窗[資料表][link_Physical]
        * 過濾: 依各單據需求, 指定過濾條件
        * 回傳: 資料表名稱
        * 當`(1)名稱欄位`有值 且 與回傳的資料表名稱不相同時, 顯示詢問訊息盒【標題: 系統訊息 / 訊息內容: 異動資料表將清除相關欄位, 是否繼續? / 按鍵: 確認、取消】
            * 確認: 關閉訊息, 清除相關的欄位或記錄
                * 清除內容依各單據需求指定
            * 取消: 關閉訊息, 保留原內容
    * 作業流程    
        * <ps>待補</ps>         

## <p id="ruledialog5">挑選資料表元件通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示資料表元件名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 指定的資料表 及 依各單據需求, 指定其它過濾條件
        * 回傳: 資料表元件名稱
    * 作業流程    
        * <ps>待補</ps>         

## <p id="ruledialog4">挑選檢視表通則</p>
![pic][image_ruleDialog3]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示檢視表名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)名稱欄位`有值 時, 致能
        * 開窗[檢視表][link_Logical]
        * 過濾: 依各單據需求, 指定過濾條件
        * 回傳: 檢視表名稱
        * 當`(1)名稱欄位`有值 且 與回傳的檢視表名稱不相同時, 顯示詢問訊息盒【標題: 系統訊息 / 訊息內容: 異動檢視表將清除相關欄位, 是否繼續? / 按鍵: 確認、取消】
            * 確認: 關閉訊息, 清除相關的欄位或記錄
                * 清除內容依各單據需求指定
            * 取消: 關閉訊息, 保留原內容
    * 作業流程    
        * <ps>待補</ps>
* `(3)參數鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)名稱欄位`有值 時, 致能
        * 當`(1)名稱欄位`無值, 顯示訊息盒【標題: 系統訊息 / 訊息內容: 請先設定 檢視表 / 按鍵: 確認】
            * 確認: 關閉訊息
        * 開窗[傳遞參數][link_Parameter]
        * 傳入: `(1)名稱欄位`
    * 作業流程    
        * <ps>待補</ps>         
* 其它說明
    * 編輯存回, 當參數清除時, 須連帶刪除該傳遞參數的儲存內容

## <p id="ruledialog8">挑選檢視表元件通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 編輯狀態
            * 顯示檢視表元件名稱
            * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 指定的檢視表 及 依各單據需求, 指定其它過濾條件
        * 回傳: 檢視表元件名稱
    * 作業流程    
        * <ps>待補</ps>

## <p id="ruledialog6">挑選表單通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 編輯狀態
            * 依專案多語顯示表單名稱
            * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 依各單據需求, 指定過濾條件
        * 回傳: 表單名稱
        * 當`(1)名稱欄位`有值 且 與回傳的表單名稱不相同時, 顯示詢問訊息盒【標題: 系統訊息 / 訊息內容: 異動表單將清除相關欄位, 是否繼續? / 按鍵: 確認、取消】
            * 確認: 關閉訊息, 清除相關的欄位或記錄
                * 清除內容依各單據需求指定
            * 取消: 關閉訊息, 保留原內容
    * 作業流程    
        * <ps>待補</ps>         

## <p id="ruledialog7">挑選表單元件通則</p>
![pic][image_ruleDialog1]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 依專案多語顯示表單元件名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 依下列條件過濾
            * 指定的表單
            * 元件類型不為按鍵(以下列出按鍵的元件類型)
                |元件類型 |
                |--------|
                |wMBOpen.開啟(選單列) |
                |wMBExit.退出(選單列) |
                |wMBAdd.新增(選單列) |
                |wMBEdit.修改(選單列) |
                |wMBASave.新增存回(選單列) |
                |wMBESave.修改存回(選單列) |
                |wMBDelete.刪除(選單列) |
                |wMBExport.匯出(選單列) |
                |wMBImport.匯入(選單列) |
                |wMBPrint.列印(選單列) |
                |wMBCopy.複製(選單列) |
                |wMBList.清單(選單列) |
                |wTBMenu.功能選單 |
                |wTBBtn.功能按鈕 |
                |funckey.功能按鍵(欄位資料) |
                |liteFunckey.功能按鍵(多覽欄位資料) |
                |wTBMenuItem.功能選單項目 |
                |wHBtn.隱藏按鍵) |
            * 依各單據需求, 指定其它過濾條件
        * 回傳: 表單元件名稱    
    * 作業流程    
        * <ps>待補</ps>         
* `(3)清除鍵`
    * 用途說明
    * 規格說明
        * 當有清除鍵, 編輯狀態, 致能
        * 當有清除鍵, 清空`(1)名稱欄位`
    * 作業流程    
        * <ps>待補</ps>    

## <p id="ruledialog13">挑選表單按鍵通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 依專案多語顯示表單按鍵名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 依下列條件過濾
            * 指定的表單
            * 元件類型須為按鍵
                |元件類型 |
                |--------|
                |wMBOpen.開啟(選單列) |
                |wMBExit.退出(選單列) |
                |wMBAdd.新增(選單列) |
                |wMBEdit.修改(選單列) |
                |wMBASave.新增存回(選單列) |
                |wMBESave.修改存回(選單列) |
                |wMBDelete.刪除(選單列) |
                |wMBExport.匯出(選單列) |
                |wMBImport.匯入(選單列) |
                |wMBPrint.列印(選單列) |
                |wMBCopy.複製(選單列) |
                |wMBList.清單(選單列) |
                |wTBMenu.功能選單 |
                |wTBBtn.功能按鈕 |
                |funckey.功能按鍵(欄位資料) |
                |liteFunckey.功能按鍵(多覽欄位資料) |
                |wTBMenuItem.功能選單項目 |
                |wHBtn.隱藏按鍵) |
            * 依各單據需求, 指定其它過濾條件
        * 回傳: 表單按鍵名稱
    * 作業流程    
        * <ps>待補</ps>         

## <p id="ruledialog9">挑選參數通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示參數名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 依下列條件過濾
            * 指定的檢視表 或 資料交易 或 表單 或 報表
            * 依各單據需求, 指定其它過濾條件
        * 回傳: 表單參數名稱
    * 作業流程    
        * <ps>待補</ps>         

## <p id="ruledialog10">挑選全域變數通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示全域變數名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)名稱欄位`有值 時, 致能
        * 開窗[全域變數][link_GlobalVariable]
        * 過濾: 依各單據需求, 指定其它過濾條件
        * 回傳: 全域變數名稱
    * 作業流程    
        * <ps>待補</ps>         

## <p id="ruledialog11">設定按鍵執行條件表格通則</p>
![pic][image_ruleDialog4]
* `(1)條件內容`
    * 用途說明
    * 規格說明
        * [操作條件式通則][link_ruledialog1]
* `(2)訊息處理`
    * 用途說明
    * 規格說明
        * [操作按鍵執行條件訊息通則][link_ruledialog12]
* `(3)表格操作`
    * 用途說明
    * 規格說明
        * [操作表格記錄通則][link_rulebutton3]
* 其它說明
    * 編輯存回, 當記錄刪除時, 須連帶刪除該`(1)條件內容`、`(2)訊息處理`的儲存內容

## <p id="ruledialog12">操作按鍵執行條件訊息通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示訊息內容
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)名稱欄位`有值 時, 致能
        * 開窗[按鍵執行條件訊息][link_BAXCondition]
        * 回傳: 錯誤訊息名稱
    * 作業流程    
        * <ps>待補</ps>         

## <p id="ruledialog14">挑選開放按鍵傳入參數通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示開放按鍵傳入參數名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 指定的開放按鍵 及 依各單據需求, 指定其它過濾條件
        * 回傳: 參數名稱
    * 作業流程    
        * <ps>待補</ps>

## <p id="ruledialog15">挑選報表元件通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 編輯狀態
            * 顯示報表元件名稱
            * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 指定的報表 及 依各單據需求, 指定其它過濾條件
        * 回傳: 報表元件名稱
    * 作業流程    
        * <ps>待補</ps>

## <p id="ruledialog16">挑選函數通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 編輯狀態
            * 顯示函數元件名稱
            * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 依各單據需求, 指定過濾條件
        * 回傳: 函數名稱
    * 作業流程    
        * <ps>待補</ps>        

## <p id="ruledialog20">挑選開放按鍵回傳參數通則</p>
![pic][image_ruleDialog2]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示開放按鍵回傳參數名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 編輯狀態 時, 致能
        * 開窗[快顯選單][link_Quick]
        * 過濾: 指定的開放按鍵 及 依各單據需求, 指定其它過濾條件
        * 回傳: 參數名稱
    * 作業流程    
        * <ps>待補</ps>

## <p id="ruledialog17">操作多語訊息及替代通則</p>
![pic][image_ruleDialog5]
* `(1)名稱欄位`
    * 用途說明
    * 規格說明
        * 顯示多語名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)名稱欄位`有值 時, 致能
        * 開窗[多語詞庫][link_Multilingual]
        * 回傳: 多語名稱
    * 作業流程    
        * <ps>待補</ps>
* `(3)替代鍵`
    * 用途說明
    * 規格說明
        * 當有替代鍵, 為以下規格說明
            * 單據於編輯狀態 且 `(1)名稱欄位`有值 時, 致能
            * 單據於瀏覽狀態 且 [訊息替代][link_Replace]內容有值 時, 致能
            * 開窗[訊息替代][link_Replace]
    * 作業流程    
        * <ps>待補</ps>
* `(4)清除鍵`
    * 用途說明
    * 規格說明
        * 當有清除鍵, 為以下規格說明
        * 單據於編輯狀態 且 [訊息替代][link_Replace]內容有值 時, 致能
        * 清空訊息替代
    * 作業流程    
        * <ps>待補</ps>
* 其它說明
    * 編輯存回, 當訊息替代清除時, 須連帶刪除該訊息替代的儲存內容

## <p id="ruledialog18">操作運算式通則</p>
![pic][image_ruleDialog2]
* `(1)運算說明`
    * 用途說明
    * 規格說明
        * 顯示運算式名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 `(1)運算說明`有值 時, 致能
        * 開窗[運算式][link_Expression]
        * 回傳: 運算說明
    * 作業流程
        * <ps>待補</ps>
* 其它說明
    * 編輯存回, 當條件清除時, 須連帶刪除該條件式的儲存內容

## <p id="ruledialog19">操作邏輯函數表格通則</p>
![pic][image_ruleDialog6]
* `(1)函數名稱`
    * 用途說明
    * 規格說明
        * 參照 [挑選函數通則][link_ruledialog16], 限定: 依下列引用位置說明, 進行函數挑選, 回傳: 函數名稱, 並呼叫`(10)載入鍵`
            * [元件加註_嵌入物件/圖表][link_Chart]: 表單用圖表的邏輯函數
            * [按鍵加註_邏輯函數][link_BALogicalFunction]: 非圖表用邏輯函數
            * [報表元件加註/圖表][link_ReportObjectAnnotation]: 報表用圖表的邏輯函數
* `(2)參數名稱`
    * 用途說明
    * 規格說明
        * 顯示, 依`(1)函數名稱`至[邏輯函數][link_LogicalFunction], 取得對應的`參數名稱`; 唯讀
        * Hint: 同顯示內容
* `(3)參數型態`
    * 用途說明
    * 規格說明
        * 選項 空白/字串/數字/日期/邏輯/陣列/運算式/陣列運算式
        * 顯示, 依`(1)函數名稱`至[邏輯函數][link_LogicalFunction], 取得對應的`參數型態`; 唯讀
* `(4)對應父階`
    * 用途說明
    * 規格說明
        * 當有本欄位, 顯示, 依`(1)函數名稱`至[邏輯函數][link_LogicalFunction], 取得對應的`對應父階`; 唯讀
        * Hint: 同顯示內容
* `(5)可空白`
    * 用途說明
    * 規格說明
        * 顯示, 依`(1)函數名稱`至[邏輯函數][link_LogicalFunction], 取得對應的`可空白`; 唯讀
* `(6)參數說明`
    * 用途說明
    * 規格說明
        * 顯示, 依`(1)函數名稱`至[邏輯函數][link_LogicalFunction], 取得對應的`參數說明`; 唯讀
        * Hint: 同顯示內容
* `(7)來源型態`
    * 用途說明
    * 規格說明
        * 下拉選項來源為, 依`(1)函數名稱`、`(2)參數名稱`至[邏輯函數_來源類型][link_ParameterSourceType]的`變動選項`取得
        * 若`(4)對應父階`有值但父階的`(6)來源型態`未設定, 顯示訊息盒【標題: 系統訊息 / 訊息內容: 對應父階的來源型態尚未挑選 / 按鍵: 確認】
            * 確認: 關閉訊息
        * `(6)來源型態`=固定值, `(7)來源內容`顯示`(12)`
        * `(6)來源型態`=檔區, `(7)來源內容`顯示`(13)`
        * `(6)來源型態`=色盤, `(7)來源內容`顯示`(14)`
        * `(6)來源型態`非上述, `(7)來源內容`顯示`(15)`
    * 作業流程
        * <ps>待補</ps>
* `(8)來源內容`
    * 用途說明
    * 規格說明
        * 若`(4)對應父階`有值但父階的`(6)來源型態`未設定, 顯示訊息盒【標題: 系統訊息 / 訊息內容: 對應父階的來源型態尚未挑選 / 按鍵: 確認】
            * 確認: 關閉訊息
        * 若`(4)對應父階`有值但父階的`(7)來源內容`未設定, 顯示訊息盒【標題: 系統訊息 / 訊息內容: 對應父階的來源內容尚未挑選 / 按鍵: 確認】
            * 確認: 關閉訊息
        * `(6)來源型態`=資料表: [挑選資料表通則][link_ruledialog3], 進行資料表挑選
        * `(6)來源型態`=檢視表: [挑選檢視表通則][link_ruledialog4], 進行檢視表挑選
        * `(6)來源型態`=元件: [挑選表單元件通則][link_ruledialog7], 依駐留表單中, 進行元件挑選; 若元件為 個資加密且已解密欄位 或 密碼欄位, 則該元件顯示紅色字體
        * `(6)來源型態`=查表欄位: 
            * 若`(4)對應父階`的`(6)來源型態`=資料表, [挑選資料表元件通則][link_ruledialog5], 依父階的`(7)來源內容`, 進行資料表元件挑選
            * 若`(4)對應父階`的`(6)來源型態`=檢視表, [挑選檢視表元件通則][link_ruledialog8], 依父階的`(7)來源內容`, 進行檢視表元件挑選
            * 因查表來源, 暫不支援個資解密, 故不提供變色
        * `(6)來源型態`=參數: [挑選參數通則][link_ruledialog9], 依駐留表單中, 進行參數挑選
        * `(6)來源型態`=函數: 開窗[快顯選單][link_Quick], 進行函數挑選並回傳函數名稱; 請參閱[系統函數][link_SystemFunction]的引用說明
        * `(6)來源型態`=固定值: 由使用者自行輸入
        * `(6)來源型態`=多語詞庫: [使用多語詞庫通則][link_ruledialog2]
        * `(6)來源型態`=按鍵: [挑選表單按鍵通則][link_ruledialog13], 依駐留表單中, 進行按鍵挑選
        * `(6)來源型態`=檔區: 下拉來源為, 依駐留表單取得本表單檔區清單
        * `(6)來源型態`=選項: 開窗[快顯選單][link_Quick], 進行選項挑選並回傳選項內容; 選項來源為, 依`(1)函數名稱`、`(2)參數名稱`至[邏輯函數_來源類型][link_ParameterSourceType]的`固定選項`取得
        * `(6)來源型態`=條件式: [操作條件式通則][link_ruledialog1], 依`(4)對應父階`的`(6)來源型態`、`(7)來源內容`限定資料表或檢視表名稱
        * `(6)來源型態`=運算式: [操作運算式通則][link_ruledialog18], 限定`對應資料庫`為無
        * `(6)來源型態`=頁籤名稱: [挑選表單元件通則][link_ruledialog7], 依駐留表單中, 限定頁籤元件的頁籤名稱, 進行元件挑選
        * `(6)來源型態`=表單: [挑選表單通則][link_ruledialog6], 進行表單挑選
        * `(6)來源型態`=欄位排序: 
            * 若`(4)對應父階`的`(6)來源型態`=資料表, [挑選資料表元件通則][link_ruledialog5], 依父階的`(7)來源內容`, 進行資料表元件挑選
            * 若`(4)對應父階`的`(6)來源型態`=檢視表, [挑選檢視表元件通則][link_ruledialog8], 依父階的`(7)來源內容`, 進行檢視表元件挑選
            * 因查表來源, 暫不支援個資解密, 故不提供變色        
        * `(6)來源型態`=色盤: 開窗色盤或可自行輸入色號
        * `(6)來源型態`=面版名稱: [挑選表單元件通則][link_ruledialog7], 依駐留表單中, 限定動態面版的面版名稱, 進行元件挑選
* `(9)排序`
    * 用途說明
    * 規格說明
        * 當有本欄位, 選項 升冪/降冪; 預設 升冪; `(6)來源型態`=欄位排序, 致能, 否則清空除能
* `(10)載入鍵`
    * 用途說明
    * 規格說明
        * 依`(1)函數名稱`至[邏輯函數][link_LogicalFunction]中, 取得參數並依參數順序載入`(11)參數表格`中
        * 依`(1)函數名稱`及`(2)參數名稱`至[邏輯函數][link_LogicalFunction]判斷, 不存在`(11)參數表格`中, 則新增
        * 依`(1)函數名稱`及`(2)參數名稱`至[邏輯函數][link_LogicalFunction]判斷, 於`(11)參數表格`中存在無效參數, 則刪除

## <p id="ruledialog21">挑選自定函數通則</p>
![pic][image_ruleDialog7]
* `(1)自定函數名稱`
    * 用途說明
    * 規格說明
        * 顯示自定函數名稱
        * 不須輸入, 唯讀
* `(2)開窗鍵`
    * 用途說明
    * 規格說明
        * 單據於編輯狀態 或 單據於瀏覽狀態 且 (2)自定函數有值 時, 致能
        * 開窗 [自定函數][link_CustomFunction], 進行自定函數挑選, 回傳: 函數名稱, 並呼叫`(5)載入鍵`
        * 異動時執行`(5)載入鍵`
* `(3)順序`
    * 用途說明
    * 規格說明
        * 依序給流水號
* `(4)參數名稱`
    * 用途說明
    * 規格說明
        * 顯示, 依`(1)自定函數名稱`至[自定函數][link_CustomFunction], 取得對應的`參數名稱`; 唯讀
* `(5)載入鍵`
    * 用途說明
    * 規格說明
        * 依`(1)自定函數名稱`至[自定函數][link_CustomFunction]中, 取得參數並依參數順序載入`(10)參數表格`中
        * 依`(1)自定函數名稱`及`(4)參數名稱`至[自定函數][link_CustomFunction]判斷, 不存在`(10)參數表格`中, 則新增
        * 依`(1)自定函數名稱`及`(4)參數名稱`至[自定函數][link_CustomFunction]判斷, 於`(10)參數表格`中存在無效參數, 則刪除
* `(6)參數型態`
    * 用途說明
    * 規格說明
        * 選項 字串/數字/陣列/日期/布林
        * 顯示, 依`(1)自定函數名稱`至[自定函數][link_CustomFunction], 取得對應的`參數型態`
* `(7)傳遞型態`
    * 用途說明
    * 規格說明
        * 選項 表單元件/固定值/表單參數/全域變數
        * `(7)傳遞型態`=固定值, `(8)傳遞內容`顯示`(11)`
        * `(7)傳遞型態`非上述, `(8)傳遞內容`顯示`(12)`
* `(8)傳遞內容`
    * 用途說明
    * 規格說明
        * `(7)傳遞型態`=固定值: 由使用者自行輸入
        * `(7)傳遞型態`=表單元件: [挑選表單元件通則][link_ruledialog7], 限定: 本表單下的元件, 進行挑選, 回傳: 表單元件
            * 參照 [個資加密提示通則][link_ruleother11]
        * `(7)傳遞型態`=參數: [挑選參數通則][link_ruledialog9], 限定: 本表單下的參數, 進行挑選, 回傳: 表單參數
        * `(7)傳遞型態`=全域變數: [挑選全域變數通則][link_ruledialog10], 進行全域變數挑選
* `(9)同名對應鍵`
    * 用途說明
    * 規格說明
        * 依`(4)參數名稱`比對駐留表單的元件名稱, 預設給同名元件
        * 無同名元件 或 `(8)傳遞內容`不為空值, `(7)傳遞型態`、`(8)傳遞內容`皆不異動
        * 有同名元件 且 `(8)傳遞內容`為空值, `(7)傳遞型態`給值表單元件、`(8)傳遞內容`給值同名元件

<!-- 圖示 -->
[image_ruleDialog1]:attachment/ruleDialog1.png
[image_ruleDialog2]:attachment/ruleDialog2.png
[image_ruleDialog3]:attachment/ruleDialog3.png
[image_ruleDialog4]:attachment/ruleDialog4.png
[image_ruleDialog5]:attachment/ruleDialog5.png
[image_ruleDialog6]:attachment/ruleDialog6.png
[image_ruleDialog7]:attachment/ruleDialog7.png

<!-- 超連結 -->
[link_Condoper]:../Condoper/README "條件式"
[link_Expression]:../Expression/README "運算式"
[link_Multilingual]:../Multilingual/README "多語詞庫"
[link_Quick]:../Quick/README "快顯選單"
[link_Physical]:../Physical/README "資料表"
[link_Logical]:../Logical/README "檢視表"
[link_Parameter]:../Parameter/README "傳遞參數"
[link_GlobalVariable]:../GlobalVariable/README "全域變數"
[link_BAXCondition]:../BAXCondition/README "按鍵執行條件訊息"
[link_ruledialog1]:#ruledialog1 "操作條件式通則"
[link_ruledialog12]:#ruledialog12 "操作按鍵執行條件訊息通則"
[link_rulebutton3]:../RulesButton/README#rulebutton3 "共用通則_按鍵操作/操作表格記錄通則"
[link_Replace]:../Replace/README "訊息替代"
[link_LogicalFunction]:../LogicalFunction/README "邏輯函數"
[link_ParameterSourceType]:../LogicalFunction/ParameterSourceType.md "邏輯函數_來源類型"
[link_CustomFunction]:../CustomFunction/README "自定函數"
[link_ruledialog2]:#ruledialog2 "使用多語詞庫通則"
[link_ruledialog3]:#ruledialog3 "挑選資料表通則"
[link_ruledialog4]:#ruledialog4 "挑選檢視表通則"
[link_ruledialog5]:#ruledialog5 "挑選資料表元件通則"
[link_ruledialog8]:#ruledialog8 "挑選檢視表元件通則"
[link_ruledialog6]:#ruledialog6 "挑選表單通則"
[link_ruledialog7]:#ruledialog7 "挑選表單元件通則"
[link_ruledialog13]:#ruledialog13 "挑選表單按鍵通則"
[link_ruledialog9]:#ruledialog9 "挑選參數通則"
[link_ruledialog18]:#ruledialog18 "操作運算式通則"
[link_ruledialog16]:#ruledialog16 "操作函數通則"
[link_SystemFunction]:../SystemFunction/README "系統函數"
[link_Chart]:../OADisplayEmbed/Chart "元件加註_嵌入物件/圖表"
[link_ReportObjectAnnotation]:../ReportObjectAnnotation/README "報表元件加註"
[link_BALogicalFunction]:../BALogicalFunction/README "按鍵加註_邏輯函數"
[link_ruledialog10]:#ruledialog10 "挑選全域變數通則"
[link_ruleother11]:../RulesOther/README#ruleother11 "共用通則_其它/個資加密提示通則"